--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tanstack/react-query": "^5.87.4",
     "@types/qrcode": "^1.5.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
