--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@types/qrcode": "^1.5.5",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "next": "15.5.3",
+    "next-cloudinary": "^6.16.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.7",
     "zustand": "^5.0.8"
